[package]
name = "snarc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.11"
bitflags = { version = "1.3.2", optional = true }
camino = "1.1.1"
hash40 = { version = "1.2.0", default-features = false }
paste = "1.0.8"
ruzstd = "0.3.0"
semver = "1.0.13"
thiserror = "1.0.32"
zstd = { version = "0.11.2", optional = true }

[features]
compression = ["zstd"]
raw = ["bitflags"]
